MDEV-37328 Assertion failure in make_empty_rec upon CONVERT PARTITION

ALTER TABLE ... CONVERT invokes build_frm_image() three times on
the same data structures. The latter should not increment
create_info->null_bits on every invocation.